--- a/index.html
+++ b/index.html
@@ -28,16 +28,13 @@
 			<li><a href="#">Home</a></li>
 			<li><a href="whyconselling.html">Why Conselling??</a></li>
 			<li><a href="aboutus.html">About Us</a></li>
-			<li><a href="login.html">Login</a></li>
+			<li><a href="login.php">Login</a></li>
 			<li><a href="register.html">Register</a></li>
 		</nav>
 	</div>
 
 	<section class="hero">
 		<div class="background-image" style="background-image: url(assets/img/back.jpg);"></div>
-		<!--<h1>Responsive Flexbox Template</h1>
-		<h3>A freebie by Tutorialzine.</h3>-->
-		<!-- Start WOWSlider.com BODY section -->
 		<div id="wowslider-container1">
 		<div class="ws_images"><ul>	
 			<li><a href="http://wowslider.net"><img src="data1/images/counseling2.jpg" alt="html5 slideshow" title="" id="wows1_1"/></a>The Success is not an incident, but a planned event...</li>
@@ -53,7 +50,6 @@
 		<script type="text/javascript" src="engine1/wowslider.js"></script>
 		<script type="text/javascript" src="engine1/script.js"></script>
 	</section>
-
 
 	<section class="features">
 		<h3 class="title">Features and services</h3>
@@ -117,7 +113,5 @@
 		</ul>
 		<p>Made by</p>
 	</footer>
-
-</body>
 
 </html>
