--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="https://use.fontawesome.com/60d754608f.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
 	<script type="text/javascript" src="engine1/jquery.js"></script>
@@ -93,12 +94,14 @@
 
 
 	<section class="contact">
-		<h3 class="title">Join our newsletter</h3>	
+		<h3 class="title">Contact Us</h3>	
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
 		<hr>
 
 		<form>
-			<input type="email" placeholder="Email">
+			<div><input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <textarea rows="2" cols="50">Drop a Message</textarea></div>
 			<a href="#" class="btn">Subscribe now</a>
 		</form>
 	</section>
